compiler/src/test/resources/golden/errors/suggest_ctor_field.dawn
type Point = { x: Float, y: Float }

fn f() -> Point = Point { x: 1.0, yy: 2.0 }
