compiler/src/test/resources/golden/errors/suggest_ctor_field.err
error: `Point` has no field `yy`
  --> suggest_ctor_field.dawn:3:35
  |
3 | fn f() -> Point = Point { x: 1.0, yy: 2.0 }
  |                                   ^^^^^^^
  = hint: did you mean `y`?
